# nexus-pipeline

./: .gitignore  README.md  config.py  explore.ipynb  main.py  process.py  pyproject.toml
EDA/: explore.ipynb
data/: nexus_data_map.csv
