[project]
name = "nexus-pipeline"
version = "0.1.0"
description = "Data processing pipeline for various fiscal and economic datasets"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Mirian Lima", email = "mirian.lima@un.org"}
]
dependencies = [
    "pandas",
    "wbgapi",
    "ibis-framework[duckdb]",
    "openpyxl",
    "pyarrow",
    "altair"
]